--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "start:front": "react-scripts start",
-    "start": "npm run build && npm run prod:server",
+    "start": "npm run prod:server",
     "dev:server": "nodemon server.js",
     "prod:server": "node server.js",
     "build": "react-scripts build",
